--- a/references.bib
+++ b/references.bib
@@ -26,14 +26,6 @@
 }
 
 
-@inproceedings{chen2018autostacker,
-	title={Autostacker: A compositional evolutionary learning system},
-	author={Chen, Boyuan and Wu, Harvey and Mo, Warren and Chattopadhyay, Ishanu and Lipson, Hod},
-	booktitle={Proceedings of the Genetic and Evolutionary Computation Conference},
-	pages={402--409},
-	year={2018}
-}
-
 @inproceedings{de2017recipe,
 	title={RECIPE: a grammar-based framework for automatically evolving classification pipelines},
 	author={de S{\'a}, Alex GC and Pinto, Walter Jos{\'e} GS and Oliveira, Luiz Otavio VB and Pappa, Gisele L},
@@ -250,12 +242,9 @@
 	year = {2015}
 }
 
-@Inbook{olson2019tpot,
+@inbook{olson2019tpot,
 	author="Olson, Randal S.
 	and Moore, Jason H.",
-	editor="Hutter, Frank
-	and Kotthoff, Lars
-	and Vanschoren, Joaquin",
 	title="TPOT: A Tree-Based Pipeline Optimization Tool for Automating Machine Learning",
 	bookTitle="Automated Machine Learning: Methods, Systems, Challenges",
 	year="2019",
@@ -885,7 +874,6 @@
 	author={Wu, Qingyun and Wang, Chi and Huang, Silu},
 	booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
 	volume={35},
-	number={12},
 	pages={10347--10354},
 	year={2021}
 }
@@ -1009,14 +997,6 @@
 	pages = {6765–6816},
 	numpages = {52},
 	keywords = {hyperparameter optimization, deep learning, model selection, online optimization, infinite-armed bandits}
-}
-
-@inproceedings{yang2020automl,
-	title={Automl pipeline selection: Efficiently navigating the combinatorial space},
-	author={Yang, Chengrun and Fan, Jicong and Wu, Ziyang and Udell, Madeleine},
-	booktitle={Proceedings of the 26th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
-	pages={1446--1456},
-	year={2020}
 }
 
 @inproceedings{hutter2011sequential,
